--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.5</version>
+        </dependency>
+
+        <dependency>
             <groupId>at.tugraz.ist.ase</groupId>
             <artifactId>heuristics</artifactId>
             <version>1.1.1</version>
