--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>at.tugraz.ist.ase</groupId>
             <artifactId>heuristics</artifactId>
-            <version>1.1.1</version>
+            <version>1.1.2-alpha-8</version>
         </dependency>
     </dependencies>
 
