--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
 
         <dependency>
             <groupId>at.tugraz.ist.ase</groupId>
-            <artifactId>heuristics</artifactId>
-            <version>1.1.2-alpha-8</version>
+            <artifactId>ce</artifactId>
+            <version>1.1.2-alpha-10</version>
         </dependency>
     </dependencies>
 
